# wayland-toolkit

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  hello_wayland_egl_draw.c  readme.md
cmake/: FindWayland.cmake  main-config.cmake
examples/: image.rs  test_app.cpp
inc/: stokkr_kit.hpp
inc/proto/: xdg-shell-unstable-v6.h
inc/util/: StackingLayoutManager.hpp  WaylandSurface.hpp
inc/widgets/: Button.hpp  Icon.hpp  InputField.hpp  Label.hpp
src/: lib.rs  rendering.rs  stokkr_kit.cpp  widgets.rs
src/rendering/: kit_cairo.rs  kit_egl.rs
src/widgets/: button.rs  label.rs
tmp/: hello_wayland_egl_done.c  hello_wayland_egl_draw.c
toolkit-cpp/: CMakeLists.txt  FindPango.cmake  hello_wayland.c  hello_wayland_egl.c  hello_wayland_egl_draw.h  myhello.c
toolkit-cpp/old_sources/: hello_wayland_contrived.c  hello_wayland_egl_before_zxdg.c  hello_wayland_egl_no_xdg.c  hello_wayland_egl_overkill.c  hello_wayland_egl_tests1.c
toolkit-cpp/old_sources/1/: xdg-decoration-unstable-v1.c
toolkit-rust/: Cargo.toml
toolkit-rust/src/: main.rs
