[package]
name = "stokkr-toolkit"
version = "0.2.0"
edition = "2021"

[dependencies]
khronos-egl = { version = "4.1.0", features = ["static"] }
wayland-client = { version = "0.29.5", features = ["use_system_lib"] }
wayland-egl = "0.29.5"
cairo-rs = { version = "0.16.1", features = ["png"] }
pango = "0.16.0"
smithay-client-toolkit = "0.16.0"
image = "0.24.4"
wayland-protocols = "0.29.5"
tempfile = "3.3.0"
glutin = "0.30.3"
gl = "0.14.0"

[build-dependencies]
gl_generator = "0.14"

[[example]]
name = "image"
