[package]
name = "hello_wayland_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khronos-egl = { version = "4.1.0", features = ["static"] }
wayland-client = { version = "0.29.5", features = ["use_system_lib"] }
wayland-egl = "0.29.5"
cairo-rs = "0.16.1"
pango = "0.16.0"
smithay-client-toolkit = "0.16.0"
image = "0.24.4"
wayland-protocols = "0.29.5"
